--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geocoding: ^3.0.0
   background_sms: ^0.0.4
   geolocator: ^11.0.0
+  shake: ^2.2.0
 
 dev_dependencies:
   flutter_test:
