--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   sensors_plus: ^1.4.1
   path_provider: ^2.1.2
   image_picker: ^1.0.8
+  audioplayers: ^6.0.0
+  flutter_background_service: ^5.0.5
+
+  
   
 
   
@@ -77,9 +81,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/siren.mp3
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
